--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <h1> Дом Наркомфина </h1> <!-- heading text 1 -->
 
+    <p> тут новая правка </p>
+
     <hr>  <!-- horisontal row - горизонатльная линия -->
 
     <p class="mytext" > <!-- paragraph -->    
